# meal_analyer_prj

./: packages.txt  pyproject.toml  requirements.txt
pages/: Input.py
