[project]
name = "streamlit-pratice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "koreanize-matplotlib>=0.1.1",
    "langchain>=1.2.10",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.1.10",
    "matplotlib>=3.8.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
    "ultralytics>=8.4.14",
]
